# tahrir-api

./: .coveragerc  .gitignore  .nti_cover_package  .travis.yml  AUTHORS  CHANGELOG.md  CHANGELOG.rst  CHANGES.rst  MANIFEST.in  README.rst  alembic.ini  doc-requirements.txt  get-changelog-block.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
alembic/: README  env.py
alembic/versions/: 139ec7ed17b7_add_a_rank_column_to.py  16943d9088cf_fix_foreign_key_mism.py  24282792d72a_add_created_by_field.py  2879ed5a6297_issued_for.py  39583332f4ea_add_profile_fields_t.py  3c7fd5b4e2c2_add_two_new_columns_.py  4099fa344171_add_last_login.py  420c02357a1b_add_created_on_field.py  508367dcbbb5_add_an_stl_column_fo.py  5791a2b9fb6a_add_tags_field_to_ba.py  ce541796a7_add_authz_table.py  e7040e76728_create_new_tables_for_quest.py  fa1d309e8c3_add_created_on_field.py
docs/: Makefile  api.rst  conf.py  index.rst
examples/: awardbadge.py  fossboxbadge.py
scripts/: initializedb.py  populateseries.py
src/: .gitignore
src/tahrir_api/: __init__.py  _compat.py  dbapi.py  model.py  utils.py
src/tahrir_api/tests/: __init__.py  test_dbapi.py  test_ranking.py
tahrir-api/: dbapi.py  model.py
tahrir_api/: dbapi.py  model.py  query_model.py  utils.py
tahrir_api/examples/: awardbadge.py  fossboxbadge.py
tahrir_api/migrations/: alembic.ini  env.py  script.py.mako
tahrir_api/migrations/versions/: 139ec7ed17b7_add_a_rank_column_to.py  16943d9088cf_fix_foreign_key_mism.py  24282792d72a_add_created_by_field.py  2879ed5a6297_issued_for.py  39583332f4ea_add_profile_fields_t.py  3c7fd5b4e2c2_add_two_new_columns_.py  3d3fb9e59e7b_add_person_avatar.py  4099fa344171_add_last_login.py  420c02357a1b_add_created_on_field.py  508367dcbbb5_add_an_stl_column_fo.py  51261da641fb_currentvalue.py  5791a2b9fb6a_add_tags_field_to_ba.py  ce541796a7_add_authz_table.py  e7040e76728_create_new_tables_for_quest.py  fa1d309e8c3_add_created_on_field.py
tahrir_api/scripts/: initializedb.py  populate_avatars.py  populatedb.py  populateseries.py  syncdb.py  utils.py
tests/: conftest.py  test_db_init.py  test_dbai.py  test_dbapi.py  test_model.py  test_ranking.py
