[tool.poetry]
name = "tahrir-api"
version = "0.8.1"
description = "An API for interacting with the Tahrir database"

license = "GPLv3+"

authors = [
  "Ross Delinger <rdelinge@redhat.com>",
  "Fedora Infrastructure <admin@fedoraproject.org>",
]

readme = 'README.rst'

repository = "https://github.com/fedora-infra/tahrir-api"
homepage = "https://github.com/fedora-infra/tahrir-api"

packages = [
    { include = "tahrir_api" },
]

include = [
    { path = "tests/*", format = "sdist" },
]

classifiers= [
    "Programming Language :: Python",
    "Framework :: Pyramid",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: GNU General Public License v3 or later(GPLv3+)",
]

[tool.poetry.dependencies]
python = "^3.9.0"
pastedeploy = "^3.1.0"
pygments = "^2.17.2"
simplejson = "^3.19.2"
sqlalchemy = "^2.0.29"
arrow = "^1.3.0"
alembic = "^1.13.1"
fedora-messaging = "^3.5.0"
tahrir-messages = "^1.0.2"


[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = ">=7.4.4"}
black = ">=24.3.0"
ruff = ">=0.3.5"
pytest = ">=8.1.1"
pytest-cov = ">=5.0.0"

[tool.poetry.scripts]
initialize_tahrir_db = "tahrir_api.scripts.initializedb:main"
populate_series_in_tahrir_db = "tahrir_api.scripts.populateseries:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.coverage.run]
branch = true
source = [
    "tahrir_api",
]

[tool.coverage.report]
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
omit = [
    "tests/*",
]
