[tool.poetry]
name = "tahrir-api"
version = "1.1.1"
description = "An API for interacting with the Tahrir database"

license = "GPLv3+"

authors = [
  "Ross Delinger <rdelinge@redhat.com>",
  "Fedora Infrastructure <admin@fedoraproject.org>",
]

readme = 'README.rst'

repository = "https://github.com/fedora-infra/tahrir-api"
homepage = "https://github.com/fedora-infra/tahrir-api"

packages = [
    { include = "tahrir_api" },
]

include = [
    { path = "tests/*", format = "sdist" },
    { path = "examples/*", format = "sdist" },
]

classifiers= [
    "Programming Language :: Python",
    "Framework :: Pyramid",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[tool.poetry.dependencies]
python = "^3.9.0"
pastedeploy = "^3.1.0"
pygments = "^2.17.2"
simplejson = "^3.19.2"
sqlalchemy = "^2.0.29"
arrow = "^1.3.0"
alembic = "^1.13.1"
fedora-messaging = "^3.5.0"
tahrir-messages = "^1.0.2"
sqlalchemy-helpers = ">=0.13.0"
fasjson-client = {version = "^1.0.8", optional = true}
click = {version = "^8.0.0", optional = true}


[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = ">=7.4.4"}
black = ">=24.3.0"
ruff = ">=0.3.5"
pytest = ">=8.1.1"
pytest-cov = ">=5.0.0"

[tool.poetry.extras]
scripts = [
  "click",
  "fasjson-client",
]

[tool.poetry.scripts]
sync_tahrir_db = "tahrir_api.scripts.syncdb:main"
populate_series_in_tahrir_db = "tahrir_api.scripts.populateseries:main"
tahrir-populate-avatars = "tahrir_api.scripts.populate_avatars:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "RUF"]
ignore = ["S324"]  # Allow use of md5 & sha1

[tool.ruff.lint.isort]
lines-after-imports = 2
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.run]
branch = true
source = [
    "tahrir_api",
]

[tool.coverage.report]
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
omit = [
    "tests/*",
    "tahrir_api/migrations/env.py",
]
